--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "rolex",
+  "name": "webdb3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon"
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "Web XVI",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
